--- a/src/modules/sc_control_allocator/Kconfig
+++ b/src/modules/sc_control_allocator/Kconfig
@@ -4,8 +4,8 @@ menuconfig MODULES_SC_CONTROL_ALLOCATOR
 	---help---
 		Enable support for sc_control_allocator
 
-menuconfig USER_CONTROL_ALLOCATOR
-	bool "control_allocator running as userspace module"
+menuconfig USER_SC_CONTROL_ALLOCATOR
+	bool "sc_control_allocator running as userspace module"
 	default y
 	depends on BOARD_PROTECTED && MODULES_SC_CONTROL_ALLOCATOR
 	---help---
